wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_multiple_errors.rs
#[derive(wallet_common_macros::ErrorCategory)]
enum Error {
    First,
    Second,
}

fn main() {
    let _ = Error::First;
}
